@@ -1,5 +1,6 @@
 [SNAPSHOT]
  * drop optional dependency on Apache commons-codec
+ * add API - Dataporten (https://docs.dataporten.no/) (thanks to https://github.com/xibriz)
 
 [5.0.0]
  * drop Java 7 backward compatibility support, become Java 8 only
